Add HashTag model, adjust tests and methods accordingly